[CI] Publish Documentation for cbf1358698e7ba1bafee67f0cb3edb2fb0b3a364 - cbf1358698e7ba1bafee67f0cb3edb2fb0b3a364 🚀

--- a/acs-workshop/index.html
+++ b/acs-workshop/index.html
@@ -453,6 +453,9 @@ This is not an official RH Advanced Cluster Security guide or workshop. Please c
 <h2>Contributors</h2>
 <div class="sectionbody">
 <div class="paragraph">
+<p>This is a customized version of the original Hands-On developed by Red Hat Scholars. This version was developed for Banorte by <a href="https://github.com/vagnerfarias">Vagner Fairas</a> and <a href="https://github.com/jcepedav">Juan Carlos Cepeda</a>.</p>
+</div>
+<div class="paragraph">
 <p>This workshop has been developed and is maintained by <a href="https://github.com/rcarrata">Roberto Carratalá</a>,  <a href="https://github.com/jadebustos">Jose Angel de Bustos</a> and <a href="https://github.com/josgonza-rh">Jose Antonio Gonzalez Prada</a>.</p>
 </div>
 <div class="paragraph">
