[CI] Publish Documentation for a6380b472e2370d7ff32ae3b9bc659698206c6d5 - a6380b472e2370d7ff32ae3b9bc659698206c6d5 🚀

--- a/acs-workshop/01-setup.html
+++ b/acs-workshop/01-setup.html
@@ -518,8 +518,13 @@ Once you have your cluster, you can download the latest OpenShift client(oc) fro
 Kubernetes Version: v1.20.2</code></pre>
 </div>
 </div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="_login_to_openshift_cluster"><a class="anchor" href="#_login_to_openshift_cluster"></a>Login to OpenShift Cluster</h2>
+<div class="sectionbody">
 <div class="paragraph">
-<p>And then you are ready for installing RHACS on Openshift.</p>
+<p>And then you are ready for review the ACM installation.</p>
 </div>
 </div>
 </div>
