--- a/acs-workshop/02-getting_started.html
+++ b/acs-workshop/02-getting_started.html
@@ -386,7 +386,7 @@
 <i class="fa icon-note" title="Note"></i>
 </td>
 <td class="content">
-You can request in RHPDS the environment already installed (including the demo) - Go to Multi-Product Demo &#8594; Openshift 4 Advanced Cluster Security 3
+We have installed ACM and done the basic configuration for you. The following steps are for reference only. Please continue with the instructions from the point <strong>RHACS login</strong>.
 </td>
 </tr>
 </table>
@@ -396,6 +396,18 @@ You can request in RHPDS the environment already installed (including the demo) 
 <div class="sect1">
 <h2 id="install_acs_operator"><a class="anchor" href="#install_acs_operator"></a>RHACS Operator Installation</h2>
 <div class="sectionbody">
+<div class="admonitionblock note">
+<table>
+<tr>
+<td class="icon">
+<i class="fa icon-note" title="Note"></i>
+</td>
+<td class="content">
+Already executed - You do not need to do anything.
+</td>
+</tr>
+</table>
+</div>
 <div class="olist arabic">
 <ol class="arabic">
 <li>
@@ -445,6 +457,18 @@ You can request in RHPDS the environment already installed (including the demo) 
 <div class="sect1">
 <h2 id="install_acs_central"><a class="anchor" href="#install_acs_central"></a>RHACS Central Cluster Installation</h2>
 <div class="sectionbody">
+<div class="admonitionblock note">
+<table>
+<tr>
+<td class="icon">
+<i class="fa icon-note" title="Note"></i>
+</td>
+<td class="content">
+Already executed - You do not need to do anything.
+</td>
+</tr>
+</table>
+</div>
 <div class="paragraph">
 <p>In this section we will deploy the Central component in the lab cluster. The Central is made up two main deployments:</p>
 </div>
@@ -503,6 +527,18 @@ spec:
 </div>
 <div class="sect2">
 <h3 id="install_acs_central_web_console"><a class="anchor" href="#install_acs_central_web_console"></a>With Web Console</h3>
+<div class="admonitionblock note">
+<table>
+<tr>
+<td class="icon">
+<i class="fa icon-note" title="Note"></i>
+</td>
+<td class="content">
+Already executed - You do not need to do anything.
+</td>
+</tr>
+</table>
+</div>
 <div class="olist arabic">
 <ol class="arabic">
 <li>
@@ -557,6 +593,18 @@ spec:
 </div>
 <div class="sect2">
 <h3 id="install_acs_central_oc_client"><a class="anchor" href="#install_acs_central_oc_client"></a>With OC client</h3>
+<div class="admonitionblock note">
+<table>
+<tr>
+<td class="icon">
+<i class="fa icon-note" title="Note"></i>
+</td>
+<td class="content">
+Already executed - You do not need to do anything.
+</td>
+</tr>
+</table>
+</div>
 <div class="olist arabic">
 <ol class="arabic">
 <li>
@@ -580,6 +628,18 @@ spec:
 </div>
 <div class="sect2">
 <h3 id="_rhacs_login"><a class="anchor" href="#_rhacs_login"></a>RHACS login</h3>
+<div class="admonitionblock note">
+<table>
+<tr>
+<td class="icon">
+<i class="fa icon-note" title="Note"></i>
+</td>
+<td class="content">
+Please continue from here.
+</td>
+</tr>
+</table>
+</div>
 <div class="olist arabic">
 <ol class="arabic">
 <li>
@@ -629,11 +689,38 @@ spec:
 <div class="sect1">
 <h2 id="config_acs_securedcluster"><a class="anchor" href="#config_acs_securedcluster"></a>RHACS Secured Cluster Configuration</h2>
 <div class="sectionbody">
+<div class="admonitionblock note">
+<table>
+<tr>
+<td class="icon">
+<i class="fa icon-note" title="Note"></i>
+</td>
+<td class="content">
+Already executed - You do not need to do anything.
+</td>
+</tr>
+</table>
+</div>
+<div class="paragraph">
+<p>From ACM Central Cluster, you can assure multiple OCP or Kubernetes clusters. If you want to add more clusters to central, you will follow the next instructions.</p>
+</div>
 <div class="paragraph">
 <p>To import a cluster into ACS, you need to generate a cluster init bundle containing TLS secrets for Sensor, Collectors, and Admission Controllers.</p>
 </div>
 <div class="sect2">
 <h3 id="config_acs_securedcluster_init_bundle"><a class="anchor" href="#config_acs_securedcluster_init_bundle"></a>Generating an init bundle by using the RHACS portal</h3>
+<div class="admonitionblock note">
+<table>
+<tr>
+<td class="icon">
+<i class="fa icon-note" title="Note"></i>
+</td>
+<td class="content">
+Already executed - You do not need to do anything.
+</td>
+</tr>
+</table>
+</div>
 <div class="olist arabic">
 <ol class="arabic">
 <li>
@@ -687,6 +774,18 @@ spec:
 </div>
 <div class="sect2">
 <h3 id="config_acs_securedcluster_install_scs"><a class="anchor" href="#config_acs_securedcluster_install_scs"></a>Installing secured cluster services</h3>
+<div class="admonitionblock note">
+<table>
+<tr>
+<td class="icon">
+<i class="fa icon-note" title="Note"></i>
+</td>
+<td class="content">
+Already executed - You do not need to do anything.
+</td>
+</tr>
+</table>
+</div>
 <div class="admonitionblock note">
 <table>
 <tr>
@@ -778,6 +877,13 @@ Check the settings of the <a href="https://docs.openshift.com/acs/installing/ins
 </div>
 </div>
 </li>
+</ol>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_verify_secured_cluster_import"><a class="anchor" href="#_verify_secured_cluster_import"></a>Verify Secured Cluster import</h3>
+<div class="olist arabic">
+<ol class="arabic">
 <li>
 <p>At the end of the installation, go to the central console and check the correct attachment of the secured cluster.</p>
 <div class="imageblock">
