--- a/acs-workshop/01-setup.html
+++ b/acs-workshop/01-setup.html
@@ -524,6 +524,28 @@ Kubernetes Version: v1.20.2</code></pre>
 <h2 id="_login_to_openshift_cluster"><a class="anchor" href="#_login_to_openshift_cluster"></a>Login to OpenShift Cluster</h2>
 <div class="sectionbody">
 <div class="paragraph">
+<p>Using the information provided by the instructor, connect to the OpenShift console.</p>
+</div>
+<div class="imageblock">
+<div class="content">
+<img src="_images/prereqs/labinformation.png" alt="Lab Information" width="800">
+</div>
+</div>
+<div class="paragraph">
+<p>First, in the browser, connect to OpenShift Console <strong>1.</strong> using the credentials provided in <strong>2.</strong> and verify the access to the cluster</p>
+</div>
+<div class="paragraph">
+<p>Also, verify the connection via CLI using this command on the terminal or command line:</p>
+</div>
+<div class="listingblock console-input">
+<div class="content">
+<pre class="highlightjs highlight"><code class="language-bash hljs" data-lang="bash">oc login &lt;OpenShift-API-URL&gt; --username=&lt;myuser&gt; --password=&lt;mypass&gt;</code></pre>
+</div>
+</div>
+<div class="paragraph">
+<p>Using OpenShift-API-URL <strong>3.</strong>, myuser/mypass <strong>2.</strong></p>
+</div>
+<div class="paragraph">
 <p>And then you are ready for review the ACM installation.</p>
 </div>
 </div>
