[CI] Publish Documentation for 7d6c520f0c22aec515f7284a3d81b8c2e6c3b7e1 - 7d6c520f0c22aec515f7284a3d81b8c2e6c3b7e1 🚀

--- a/acs-workshop/01-setup.html
+++ b/acs-workshop/01-setup.html
@@ -545,6 +545,11 @@ Kubernetes Version: v1.20.2</code></pre>
 <div class="paragraph">
 <p>Using OpenShift-API-URL <strong>3.</strong>, myuser/mypass <strong>2.</strong></p>
 </div>
+<div class="imageblock">
+<div class="content">
+<img src="_images/prereqs/loginsuccess.png" alt="Login Successfull" width="800">
+</div>
+</div>
 <div class="paragraph">
 <p>And then you are ready for review the ACM installation.</p>
 </div>
