--- a/acs-workshop/02-getting_started.html
+++ b/acs-workshop/02-getting_started.html
@@ -925,6 +925,43 @@ cd rhacs-demo</code></pre>
 </div>
 </div>
 </li>
+</ol>
+</div>
+<div class="admonitionblock note">
+<table>
+<tr>
+<td class="icon">
+<i class="fa icon-note" title="Note"></i>
+</td>
+<td class="content">
+Please go to rhacs-demo/roles/ocp4_deploy_acs_demo_apps/templates/network_anomalies/peers.json.j2 and remove peers.peer.entity.name and peers.peer.entity.namespace so that it looks like below:
+</td>
+</tr>
+</table>
+</div>
+<div class="listingblock console-input">
+<div class="content">
+<pre class="highlightjs highlight"><code class="language-yaml hljs" data-lang="yaml">{
+    "peers": [
+        {
+            "peer": {
+                "entity": {
+                    "id": "{{item.json.id}}",
+                    "type": "DEPLOYMENT",
+                },
+                "ingress": false,
+                "port": 8080,
+                "protocol": "L4_PROTOCOL_TCP",
+                "state": "active"
+            },
+            "status": "ANOMALOUS"
+        }
+    ]
+}</code></pre>
+</div>
+</div>
+<div class="olist arabic">
+<ol class="arabic">
 <li>
 <p>Apply the ansible demo into the cluster:</p>
 <div class="admonitionblock warning">
