--- a/acs-workshop/02-getting_started.html
+++ b/acs-workshop/02-getting_started.html
@@ -396,11 +396,11 @@ We have installed ACM and done the basic configuration for you. The following st
 <div class="sect1">
 <h2 id="install_acs_operator"><a class="anchor" href="#install_acs_operator"></a>RHACS Operator Installation</h2>
 <div class="sectionbody">
-<div class="admonitionblock note">
+<div class="admonitionblock important">
 <table>
 <tr>
 <td class="icon">
-<i class="fa icon-note" title="Note"></i>
+<i class="fa icon-important" title="Important"></i>
 </td>
 <td class="content">
 Already executed - You do not need to do anything.
@@ -457,11 +457,11 @@ Already executed - You do not need to do anything.
 <div class="sect1">
 <h2 id="install_acs_central"><a class="anchor" href="#install_acs_central"></a>RHACS Central Cluster Installation</h2>
 <div class="sectionbody">
-<div class="admonitionblock note">
+<div class="admonitionblock important">
 <table>
 <tr>
 <td class="icon">
-<i class="fa icon-note" title="Note"></i>
+<i class="fa icon-important" title="Important"></i>
 </td>
 <td class="content">
 Already executed - You do not need to do anything.
@@ -527,11 +527,11 @@ spec:
 </div>
 <div class="sect2">
 <h3 id="install_acs_central_web_console"><a class="anchor" href="#install_acs_central_web_console"></a>With Web Console</h3>
-<div class="admonitionblock note">
+<div class="admonitionblock important">
 <table>
 <tr>
 <td class="icon">
-<i class="fa icon-note" title="Note"></i>
+<i class="fa icon-important" title="Important"></i>
 </td>
 <td class="content">
 Already executed - You do not need to do anything.
@@ -593,11 +593,11 @@ Already executed - You do not need to do anything.
 </div>
 <div class="sect2">
 <h3 id="install_acs_central_oc_client"><a class="anchor" href="#install_acs_central_oc_client"></a>With OC client</h3>
-<div class="admonitionblock note">
+<div class="admonitionblock important">
 <table>
 <tr>
 <td class="icon">
-<i class="fa icon-note" title="Note"></i>
+<i class="fa icon-important" title="Important"></i>
 </td>
 <td class="content">
 Already executed - You do not need to do anything.
@@ -689,11 +689,11 @@ Please continue from here.
 <div class="sect1">
 <h2 id="config_acs_securedcluster"><a class="anchor" href="#config_acs_securedcluster"></a>RHACS Secured Cluster Configuration</h2>
 <div class="sectionbody">
-<div class="admonitionblock note">
+<div class="admonitionblock important">
 <table>
 <tr>
 <td class="icon">
-<i class="fa icon-note" title="Note"></i>
+<i class="fa icon-important" title="Important"></i>
 </td>
 <td class="content">
 Already executed - You do not need to do anything.
@@ -709,11 +709,11 @@ Already executed - You do not need to do anything.
 </div>
 <div class="sect2">
 <h3 id="config_acs_securedcluster_init_bundle"><a class="anchor" href="#config_acs_securedcluster_init_bundle"></a>Generating an init bundle by using the RHACS portal</h3>
-<div class="admonitionblock note">
+<div class="admonitionblock important">
 <table>
 <tr>
 <td class="icon">
-<i class="fa icon-note" title="Note"></i>
+<i class="fa icon-important" title="Important"></i>
 </td>
 <td class="content">
 Already executed - You do not need to do anything.
@@ -774,11 +774,11 @@ Already executed - You do not need to do anything.
 </div>
 <div class="sect2">
 <h3 id="config_acs_securedcluster_install_scs"><a class="anchor" href="#config_acs_securedcluster_install_scs"></a>Installing secured cluster services</h3>
-<div class="admonitionblock note">
+<div class="admonitionblock important">
 <table>
 <tr>
 <td class="icon">
-<i class="fa icon-note" title="Note"></i>
+<i class="fa icon-important" title="Important"></i>
 </td>
 <td class="content">
 Already executed - You do not need to do anything.
