[CI] Publish Documentation for 4f7467592f73b6f4d178d7c2e064ea56abc3c29b - 4f7467592f73b6f4d178d7c2e064ea56abc3c29b 🚀

--- a/acs-workshop/08-compliance.html
+++ b/acs-workshop/08-compliance.html
@@ -318,21 +318,6 @@
 </ul>
   </li>
   <li class="nav-item" data-depth="1">
-    <button class="nav-item-toggle"></button>
-    <a class="nav-link" href="14-apicli.html">RHACS API and CLI</a>
-<ul class="nav-list">
-  <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="14-apicli.html#cli-overview">RHACS CLI Overview</a>
-  </li>
-  <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="14-apicli.html#cli-integration">RHACS CLI Integration</a>
-  </li>
-  <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="14-apicli.html#api-overview">RHACS API Overview</a>
-  </li>
-</ul>
-  </li>
-  <li class="nav-item" data-depth="1">
     <a class="nav-link" href="15-contributors.html">Contributors</a>
   </li>
 </ul>
@@ -544,7 +529,7 @@ metadata:
 <div class="ulist">
 <ul>
 <li>
-<p>Create a Namespace object YAML file by running:</p>
+<p>Create a Namespace object running:</p>
 </li>
 </ul>
 </div>
@@ -575,7 +560,7 @@ spec:
 <div class="ulist">
 <ul>
 <li>
-<p>Create the Compliance Operator OperatorGroup object YAML file by running:</p>
+<p>Create the Compliance Operator OperatorGroup object running:</p>
 </li>
 </ul>
 </div>
@@ -692,7 +677,7 @@ settingsRef:
 <div class="ulist">
 <ul>
 <li>
-<p>Create the resource using the follow command:</p>
+<p>Create the resource using the following command:</p>
 </li>
 </ul>
 </div>
